Added a module.