@@ -22,20 +22,12 @@
                     <release>11</release>
                 </configuration>
             </plugin>
-            <!--<plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>exec-maven-plugin</artifactId>
-                <version>1.6.0</version>
-                <configuration>
-                    <mainClass>Main</mainClass>
-                </configuration>
-            </plugin>-->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.0.0-M3</version>
                 <configuration>
-
+                    <argLine>--add-opens org.mediacat/org.mediacat.torrent_engine=ALL-UNNAMED</argLine>
                 </configuration>
             </plugin>
         </plugins>
